--- a/index.html
+++ b/index.html
@@ -1080,8 +1080,6 @@
                         <span class="skill-tag">Embedded Systems</span>
                         <span class="skill-tag">FPGA</span>
                         <span class="skill-tag">Circuit Design</span>
-                        <span class="skill-tag">Xilinx ISE</span>
-                        <span class="skill-tag">Cadence Virtuoso</span>
                     </div>
                 </div>
             </div>
@@ -1251,7 +1249,7 @@
                                 <span>maddaladiva@gmail.com</span>
                             </div>
                         </a>
-                        <a href="https://www.linkedin.com/in/divakar-maddala" target="_blank" class="contact-item">
+                        <a href="https://www.linkedin.com/in/divakar-maddala/" target="_blank" class="contact-item">
                             <div class="contact-item-icon linkedin">
                                 <i class="fab fa-linkedin"></i>
                             </div>
