--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
                     <div class="certificate-icon react">
                         <i class="fab fa-react"></i>
                     </div>
-                    <h3 class="certificate-title">React.js Development</h3>
+                    <h3 class="certificate-title">React.js Developments</h3>
                     <p class="certificate-org">Frontend Framework Certification</p>
                         <a href="https://drive.google.com/file/d/1-kHvkIUk_ahyO_YU6RwFM_quWb4soA8Y/view"
                        target="_blank" class="certificate-btn">
