--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@
                         <div class="stat-label">Major Projects</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">4</div>
+                        <div class="stat-number">7</div>
                         <div class="stat-label">Certifications</div>
                     </div>
                     <div class="stat-card">
@@ -1176,6 +1176,12 @@
     <section id="certificates" class="certificates">
         <div class="container">
             <h2 class="section-title">Professional Certifications</h2>
+            <div class="certificates-counter">
+                <div class="counter-badge">
+                    <span class="counter-number">7</span>
+                    <span class="counter-text">Verified Certifications</span>
+                </div>
+            </div>
             <div class="certificates-grid">
                 <div class="certificate-card fade-in">
                     <div class="certificate-icon web">
@@ -1188,6 +1194,18 @@
                         <i class="fas fa-certificate"></i> View Certificate
                     </a>
                 </div>
+                <div class="certificate-card fade-in">
+                    <div class="certificate-icon javascript">
+                        <i class="fab fa-js"></i>
+                    </div>
+                    <h3 class="certificate-title">JavaScript Essentials</h3>
+                    <p class="certificate-org">Core JavaScript Programming Certification</p>
+                    <a href="https://drive.google.com/file/d/1V31crnVIgyogdZmtT8FqCcg0fk5OsRwr/view" 
+                       target="_blank" class="certificate-btn">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+
 
                 <div class="certificate-card fade-in">
                     <div class="certificate-icon python">
@@ -1196,6 +1214,18 @@
                     <h3 class="certificate-title">Python Programming</h3>
                     <p class="certificate-org">Advanced Python Development Certification</p>
                     <a href="https://drive.google.com/file/d/1-_2Xs5k5JOfGq3aVTaLS5vWKzT6g_384/view" 
+                       target="_blank" class="certificate-btn">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
+
+                   <div class="certificate-card fade-in">
+                    <div class="certificate-icon database">
+                        <i class="fas fa-database"></i>
+                    </div>
+                    <h3 class="certificate-title">Introduction to Database</h3>
+                    <p class="certificate-org">Database Management Systems Certification</p>
+                    <a href="https://drive.google.com/file/d/18UULN9NLVdU3CVM-nQHp6KGZothncBr-/view" 
                        target="_blank" class="certificate-btn">
                         <i class="fas fa-certificate"></i> View Certificate
                     </a>
@@ -1224,10 +1254,22 @@
                         <i class="fas fa-certificate"></i> View Certificate
                     </a>
                 </div>
+
+               
+                <div class="certificate-card fade-in">
+                    <div class="certificate-icon git">
+                        <i class="fab fa-git-alt"></i>
+                    </div>
+                    <h3 class="certificate-title">Developer Foundations (Git)</h3>
+                    <p class="certificate-org">Version Control & Collaboration Certification</p>
+                    <a href="https://drive.google.com/file/d/15AF7GnPyJB3CdU1s3kF6Hr_aKAerUQlB/view" 
+                       target="_blank" class="certificate-btn">
+                        <i class="fas fa-certificate"></i> View Certificate
+                    </a>
+                </div>
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
