--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
                             <span class="tech-tag">Local Storage</span>
                             <span class="tech-tag">DOM Manipulation</span>
                         </div>
-                        <a href="https://divakartodo12.ccbp.tech/" target="_blank" class="project-link">
+                        <a href="https://diva-todo.vercel.app/" target="_blank" class="project-link">
                             <i class="fas fa-external-link-alt"></i> Live Demo
                         </a>
                     </div>
